Move `.hidden-piece` class styles directly onto `img` element to hopefully prevent any flickering on slower devices

--- a/frontend/src/css/ChessBoard.css
+++ b/frontend/src/css/ChessBoard.css
@@ -55,10 +55,6 @@
   bottom: 0;
 }
 
-.hidden-piece {
-  visibility: hidden;
-}
-
 .piece {
   touch-action: none;
 }
